// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageWithFallback renders correctly 1`] = `
<div
  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
>
  <div
    style="display: block; box-sizing: border-box; padding-top: 100%;"
  />
  <noscript />
  <img
    alt="phone name"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
  />
</div>
`;

exports[`ImageWithFallback renders correctly for error img src 1`] = `
<div
  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
>
  <div
    style="display: block; box-sizing: border-box; padding-top: 100%;"
  />
  <noscript />
  <img
    alt="phone name"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
  />
</div>
`;

exports[`ImageWithFallback rerenders correctly when it receives a new image 1`] = `
<div
  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
>
  <div
    style="display: block; box-sizing: border-box; padding-top: 100%;"
  />
  <noscript />
  <img
    alt="phone name"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
  />
</div>
`;

exports[`ImageWithFallback rerenders correctly when it receives a new image 2`] = `
<div
  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
>
  <div
    style="display: block; box-sizing: border-box; padding-top: 100%;"
  />
  <noscript />
  <img
    alt="new phone name"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
  />
</div>
`;
